added webkitworker and added webkit to linker in CMakeLists.txt

--- a/cpp-port/CMakeLists.txt
+++ b/cpp-port/CMakeLists.txt
@@ -28,6 +28,7 @@ FIND_PACKAGE( FastCgiQt REQUIRED )
 
 # need gui for webkit
 SET(QT_DONT_USE_QTGUI FALSE)
+SET(QT_USE_WEBKIT TRUE) 
 SET(QT_USE_QTNETWORK TRUE)
 
 # Include the cmake file needed to use qt4
@@ -41,6 +42,8 @@ FILE(GLOB HEADERS *.h)
 FILE(GLOB SOURCES *.cpp)
 QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})
 ADD_EXECUTABLE(openlayers-wms ${SOURCES} ${MOC_SOURCES})
-TARGET_LINK_LIBRARIES(openlayers-wms ${QT_LIBRARIES} ${FASTCGIQT_LIBRARIES})
+# webkit is not linked when only QT_LIBRARIES are specified,
+# explicit adding of QT_QTWEBKIT_LIBRARY is necesary
+TARGET_LINK_LIBRARIES(openlayers-wms ${QT_LIBRARIES} ${QT_QTWEBKIT_LIBRARY} ${FASTCGIQT_LIBRARIES})
 SET_TARGET_PROPERTIES(openlayers-wms PROPERTIES RUNTIME_OUTPUT_DIRECTORY .)
 
