--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-*.swp
-*.pyc
-*.png
-*.jpg
 CMakeCache.txt
 CMakeFiles/
-Makefile
 cmake_install.cmake
+*.jpg
+Makefile
 moc_*.cxx
-openlayers-wms
 .openlayers-wms
+openlayers-wms
+.openlayers-wms.fcgi
+openlayers-wms.fcgi
+*.png
+*.pyc
+*.swp
